Updated Faculty Approval Page

--- a/public/HTML/facultyapproval.html
+++ b/public/HTML/facultyapproval.html
@@ -3,78 +3,128 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Activity Approval</title>
-  <link rel="stylesheet" href="/public/styles/facultyApproval.css"> <!-- Link to the CSS file -->
-  <script src="/public/JS/facultyApproval.js"></script> <!-- Link to the JavaScript file -->
+  <title>Faculty Activity Approval</title>
+  <link rel="stylesheet" href="/public/styles/facultyApproval.css"> <!-- Custom CSS for Activity Approval -->
+  <script src="/public/JS/facultyApproval.js" defer></script> <!-- JS for handling approval actions -->
+  <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 <body>
-  
-  <!-- Header -->
-  <div class="header">
-    <h1>Activity Approval</h1>
-    <div class="profile" onclick="toggleDropdown()">
-      <span class="profile-icon"></span>
-      <div class="profile-dropdown" id="profile-dropdown">
-        <a href="#">View Profile</a>
-        <a href="#">Settings</a>
-        <a href="#">Logout</a>
-      </div>
-    </div>
-  </div>
+  <nav>
+    <div class="logo-name">
+        <div class="logo-image">
+           <img src="../../images/user1.png.png" alt="">
+        </div>
 
-  <!-- Main Content -->
-  <div class="container">
-    <h2>Pending Activities for Approval</h2>
-
-    <!-- Activity 1 -->
-    <div class="activity-container" id="activity-1">
-      <div class="student-info">
-        <strong>Name:</strong> Narendra Dukhande | <strong>Year:</strong> TE | <strong>Branch:</strong> IT
-      </div>
-      <div class="activity-header">Activity Title: Workshop on AI</div>
-      <div><strong>Description:</strong> Attended a workshop on Artificial Intelligence hosted by XYZ organization.</div>
-      <div><strong>Date:</strong> March 25, 2024</div>
-      <div><strong>Document:</strong> <a href="#">Certificate.pdf</a></div>
-      <div class="activity-status">Status: <span id="status-1">Pending</span></div>
-      <div class="activity-buttons">
-        <button class="approve" onclick="approveActivity(1)">Approve</button>
-        <button class="disapprove" onclick="disapproveActivity(1)">Disapprove</button>
-      </div>
+        <span class="logo_name">GradPath</span>
     </div>
 
-    <!-- Activity 2 -->
-    <div class="activity-container" id="activity-2">
-      <div class="student-info">
-        <strong>Name:</strong> Narendra Dukhande | <strong>Year:</strong> TE | <strong>Branch:</strong> IT
-      </div>
-      <div class="activity-header">Activity Title: Sports Event Participation</div>
-      <div><strong>Description:</strong> Participated in the inter-college football tournament.</div>
-      <div><strong>Date:</strong> April 10, 2024</div>
-      <div><strong>Document:</strong> <a href="#">Certificate.pdf</a></div>
-      <div class="activity-status">Status: <span id="status-2">Pending</span></div>
-      <div class="activity-buttons">
-        <button class="approve" onclick="approveActivity(2)">Approve</button>
-        <button class="disapprove" onclick="disapproveActivity(2)">Disapprove</button>
-      </div>
-    </div>
+    <div class="menu-items">
+        <ul class="nav-links">
+            <li><a href="/public/HTML/facultyDashboard.html">
+                <i class="uil uil-estate"></i>
+                <span class="link-name">Home</span>
+            </a></li>
+            <li><a href="/public/HTML/facultyNotifications.html">
+                <i class="uil uil-bell"></i>
+                <span class="link-name">Notifications <span class="badge" id="notificationCount"></span></span>
+            </a></li>
+            <li><a href="facultyApproval.html">
+                <i class="uil uil-check-circle"></i> 
+                <span class="link-name">Approval</span>
+            </a></li>
+            
+            <li><a href="#">
+                <i class="uil uil-browser"></i>
+                <span class="link-name">Profile</span>
+            </a></li> 
+        
+        <ul class="logout-mode">
+            <li><a href="#">
+                <i class="uil uil-signout"></i>
+                <span class="link-name">Logout</span>
+            </a></li>
 
-    <!-- Activity 3 -->
-    <div class="activity-container" id="activity-3">
-      <div class="student-info">
-        <strong>Name:</strong> Narendra Dukhande | <strong>Year:</strong> TE | <strong>Branch:</strong> IT
-      </div>
-      <div class="activity-header">Activity Title: Cultural Event Volunteer</div>
-      <div><strong>Description:</strong> Volunteered at the annual cultural festival.</div>
-      <div><strong>Date:</strong> May 15, 2024</div>
-      <div><strong>Document:</strong> <a href="#">Certificate.pdf</a></div>
-      <div class="activity-status">Status: <span id="status-3">Pending</span></div>
-      <div class="activity-buttons">
-        <button class="approve" onclick="approveActivity(3)">Approve</button>
-        <button class="disapprove" onclick="disapproveActivity(3)">Disapprove</button>
+            <li class="mode">
+                <a href="#">
+                    <i class="uil uil-moon"></i>
+                <span class="link-name">Dark Mode</span>
+            </a>
+
+            <div class="mode-toggle">
+              <span class="switch"></span>
+            </div>
+        </li>
+        </ul>
+    </div>
+</nav>
+
+  <!-- Main Content Section -->
+  <section class="dashboard">
+    <div class="top">
+      <i class="fas fa-bars sidebar-toggle"></i>
+      <div class="search-box">
+        <i class="uil uil-search"></i>
+        <input type="text" placeholder="Search here...">
       </div>
     </div>
 
-  </div>
+    <div class="dash-content">
+      <div class="title">
+        <i class="uil uil-check-circle"></i>
+        <span class="text">Pending Activity Approvals</span>
+      </div>
 
+      <div class="container">
+        <!-- Activity 1 -->
+        <div class="activity-container" id="activity-1">
+          <div class="student-info">
+            <strong>Name:</strong> Narendra Dukhande | <strong>Year:</strong> TE | <strong>Branch:</strong> IT
+          </div>
+          <div class="activity-header">Activity Title: Workshop on AI</div>
+          <div><strong>Description:</strong> Attended a workshop on Artificial Intelligence hosted by XYZ organization.</div>
+          <div><strong>Date:</strong> March 25, 2024</div>
+          <div><strong>Document:</strong> <a href="#">Certificate.pdf</a></div>
+          <div class="activity-status">Status: <span id="status-1">Pending</span></div>
+          <div class="activity-buttons">
+            <button class="approve" onclick="approveActivity(1)">Approve</button>
+            <button class="disapprove" onclick="disapproveActivity(1)">Disapprove</button>
+          </div>
+        </div>
+         <!-- Activity 2 -->
+        <div class="activity-container" id="activity-2">
+          <div class="student-info">
+            <strong>Name:</strong> Tanush Karane | <strong>Year:</strong> TE | <strong>Branch:</strong> IT
+          </div>
+          <div class="activity-header">Activity Title: Sports Event Participation</div>
+          <div><strong>Description:</strong> Participated in the inter-college football tournament.</div>
+          <div><strong>Date:</strong> April 10, 2024</div>
+          <div><strong>Document:</strong> <a href="#">Certificate.pdf</a></div>
+          <div class="activity-status">Status: <span id="status-2">Pending</span></div>
+          <div class="activity-buttons">
+            <button class="approve" onclick="approveActivity(2)">Approve</button>
+            <button class="disapprove" onclick="disapproveActivity(2)">Disapprove</button>
+          </div>
+        </div>
+
+        <!-- Activity 3 -->
+        <div class="activity-container" id="activity-3">
+          <div class="student-info">
+            <strong>Name:</strong> Lenoy Geo Thomas | <strong>Year:</strong> TE | <strong>Branch:</strong> IT
+          </div>
+          <div class="activity-header">Activity Title: Cultural Event Volunteer</div>
+          <div><strong>Description:</strong> Volunteered at the annual cultural festival.</div>
+          <div><strong>Date:</strong> May 15, 2024</div>
+          <div><strong>Document:</strong> <a href="#">Certificate.pdf</a></div>
+          <div class="activity-status">Status: <span id="status-3">Pending</span></div>
+          <div class="activity-buttons">
+            <button class="approve" onclick="approveActivity(3)">Approve</button>
+            <button class="disapprove" onclick="disapproveActivity(3)">Disapprove</button>
+          </div>
+        </div>
+
+        <!-- Add additional activities similarly if needed -->
+      </div>
+    </div>
+  </section>
 </body>
 </html>
