--- a/public/HTML/facultydashboard.html
+++ b/public/HTML/facultydashboard.html
@@ -27,7 +27,7 @@
 
         <div class="menu-items">
             <ul class="nav-links">
-                <li><a href="#">
+                <li><a href="/public/HTML/facultyDashboard.html">
                     <i class="uil uil-estate"></i>
                     <span class="link-name">Home</span>
                 </a></li>
