Changed Assign Faculty and updated Student Dashboard

--- a/public/HTML/AdminDashboard.html
+++ b/public/HTML/AdminDashboard.html
@@ -34,7 +34,7 @@
                     <i class="uil uil-files-landscapes"></i>
                     <span class="link-name">Content</span>
                 </a></li>
-                <li><a href="assignFaculty.html">
+                <li><a href="adminAssignFaculty.html">
                     <i class="uil uil-comments"></i> 
                     <span class="link-name">Assign Faculty</span>
                 </a></li>
