--- a/public/HTML/Profile.html
+++ b/public/HTML/Profile.html
@@ -31,7 +31,7 @@
                     <li><a href="studentDashboard.html">Home</a></li>
                     <li><a href="addActivity2.html">Post</a></li>
                     <li><a href="portfolio2.html">Portfolio</a></li> <!-- Updated Portfolio link -->
-                    <li><a href="Profile.html">Profile</a></li>
+                    <li><a href="profile.html">Profile</a></li>
                 </ul>
             </div>
             <div class="darkLight-searchBox">
