--- a/public/HTML/login.html
+++ b/public/HTML/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login Form in HTML and CSS | CodingNepal</title>
+  <title>Log In</title>
   <link rel="stylesheet" href="../styles/login.css" />
 </head>
 <body>
@@ -55,7 +55,7 @@
        <!-- Login button -->
       <button type="submit">Log In</button>
 
-      <p class="sign_up">Don't have an account? <a href="#">Sign up</a></p>
+      <p class="sign_up">Don't have an account? <a href="/public/HTML/signup.html">Sign up</a></p>
     </form>
   </div>
 </body>
