--- a/public/HTML/studentDashboard.html
+++ b/public/HTML/studentDashboard.html
@@ -26,7 +26,7 @@
 
         <div class="menu-items">
             <ul class="nav-links">
-                <li><a href="#">
+                <li><a href="/public/HTML/studentDashboard.html">
                     <i class="uil uil-estate"></i>
                     <span class="link-name">Home</span>
                 </a></li>
@@ -39,7 +39,7 @@
                     <span class="link-name">Portfolio</span>
                 </a></li>
                 
-                <li><a href="Profile.html">
+                <li><a href="profile.html">
                     <i class="uil uil-browser"></i>
                     <span class="link-name">Profile</span>
                 </a></li> 
@@ -112,6 +112,11 @@
             </head>
             <body>
                 <div class="container">
+                    <div class="stats">
+                        <p>&nbsp;<img src="https://github-readme-stats.vercel.app/api?username=08tanush&show_icons=true&locale=en" alt="tanushkarane" /></p>
+
+                        <p><img src="https://github-readme-stats.vercel.app/api/top-langs?username=08tanush&show_icons=true&locale=en&layout=compact" alt="tanushkarane" /></p>
+                    </div>
                     <div class="skill-box">
                         <span class="title">HTML</span>
                         <div class="skill-bar">
