--- a/public/HTML/portfolio2.html
+++ b/public/HTML/portfolio2.html
@@ -22,9 +22,9 @@
                 </div>
                 <ul class="nav-links">
                     <li><a href="studentDashboard.html">Home</a></li>
-                    li><a href="addActivity.html">Post</a></li>
+                    <li><a href="addActivity2.html">Post</a></li>
                     <li><a href="portfolio2.html">Portfolio</a></li> <!-- Updated Portfolio link -->
-                    <li><a href="Profile.html">Profile</a></li>
+                    <li><a href="profile.html">Profile</a></li>
                 </ul>
             </div>
             <div class="darkLight-searchBox">
@@ -53,7 +53,7 @@
                     <img src="../../images/user.png" alt="Profile Picture">
                 </div>
                 <div>
-                    <h1>Name :Tanush Karane</h1>
+                    <h1>Name: Tanush Karane</h1>
                     <p class="title">Engineering Graduate</p>
                 </div>
             </div>
@@ -65,7 +65,7 @@
             <a href="tanushkarane@gmail.com" class="email-button">Email Me</a>
             <div class="about">
                 <h2>About Me</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, rerum?</p>
+                <p>I am a passionate IT Engineering Student.</p>
             </div>
         </div>
         <div class="right-section">
