--- a/public/HTML/signup.html
+++ b/public/HTML/signup.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Registration or Sign Up form in HTML CSS | CodingLab </title> 
+    <title> Sign Up</title> 
     <link rel="stylesheet" href="../styles/signup.css">
    </head>
 <body>
@@ -34,7 +34,7 @@
         <input type="Submit" value="Register Now">
       </div>
       <div class="text">
-        <h3>Already have an account? <a href="#">Login now</a></h3>
+        <h3>Already have an account? <a href="/public/HTML/login.html">Login now</a></h3>
       </div>
     </form>
   </div>
