Changed Node Modules

--- a/public/HTML/login.html
+++ b/public/HTML/login.html
@@ -56,6 +56,9 @@
       <button type="submit">Log In</button>
 
       <p class="sign_up">Don't have an account? <a href="/public/HTML/signup.html">Sign up</a></p>
+      <p class="sign_up">ADMIN <a href="/public/HTML/adminDashboard.html">ADMIN</a></p>
+      <p class="sign_up">FACULTY <a href="/public/HTML/facultyDashboard.html">Faculty</a></p>
+      <p class="sign_up">Student <a href="/public/HTML/studentDashboard.html">Student</a></p>
     </form>
   </div>
 </body>
