Changes in UI and added AddInfo Page

--- a/public/HTML/AdminDashboard.html
+++ b/public/HTML/AdminDashboard.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="box box3">
                         <i class="uil uil-share"></i>
-                        <span class="text">Assigned Facaulty</span>
+                        <span class="text">Assigned Faculty</span>
                         <span class="number">50</span>
                     </div>
                 </div>
