--- a/public/HTML/studentDashboard.html
+++ b/public/HTML/studentDashboard.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="box box2">
                         <i class="uil uil-comments"></i>
-                        <span class="text">Porject Completed</span>
+                        <span class="text">Projects Completed</span>
                         <span class="number">15</span>
                     </div>
                     <div class="box box3">
@@ -154,7 +154,5 @@
             
         </div>
     </section>
-
-    <script src="../JS/facaultydashboard.js"></script>
 </body>
 </html>
