--- a/public/HTML/addActivity2.html
+++ b/public/HTML/addActivity2.html
@@ -5,8 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Activity</title>
     <link rel="stylesheet" href="../styles/addActivity2.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <script src="../JS/addActivity2.js"></script>
 </head>
 <body>
+    <nav>
+        <div class="logo-name">
+            <div class="logo-image">
+               <img src="../../images/user1.png.png" alt="">
+            </div>
+
+            <span class="logo_name">GradPath</span>
+        </div>
+
+        <div class="menu-items">
+            <ul class="nav-links">
+                <li><a href="/public/HTML/studentDashboard.html">
+                    <i class="uil uil-estate"></i>
+                    <span class="link-name">Home</span>
+                </a></li>
+                <li><a href="addActivity2.html">
+                  <i class="uil uil-plus"></i>
+                    <span class="link-name">Post</span>
+                </a></li>
+                <li><a href="portfolio2.html">
+                    <i class=" uil-comment-download"></i> 
+                    <span class="link-name">Portfolio</span>
+                </a></li>
+                
+                <li><a href="profile.html">
+                    <i class="uil uil-browser"></i>
+                    <span class="link-name">Profile</span>
+                </a></li> 
+
+                <li><a href="entryManagement.html">
+                  <i class="uil uil-cog"></i>
+                  <span class="link-name">Manage Activity</span>
+              </a></li>
+            
+            <ul class="logout-mode">
+                <li><a href="#">
+                    <i class="uil uil-signout"></i>
+                    <span class="link-name">Logout</span>
+                </a></li>
+
+                <li class="mode">
+                    <a href="#">
+                        <i class="uil uil-moon"></i>
+                    <span class="link-name">Dark Mode</span>
+                </a>
+
+                <div class="mode-toggle">
+                  <span class="switch"></span>
+                </div>
+            </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
         <h1>Upload Activity</h1>
         <form id="activityForm" action="/uploadActivity" method="POST" enctype="multipart/form-data">
@@ -54,15 +109,8 @@
 
             <!-- Document Upload -->
             <div class="form-group">
-                <label for="document">Document (Optional):</label>
+                <label for="document">Document:</label>
                 <input type="file" id="document" name="document">
-            </div>
-
-            <!-- Visibility -->
-            <div class="form-group">
-                <label>Visibility:</label>
-                <label><input type="radio" name="visibility" value="public" checked> Public</label>
-                <label><input type="radio" name="visibility" value="private"> Private</label>
             </div>
 
             <!-- Submit Button -->
@@ -71,84 +119,5 @@
             </div>
         </form>
     </div>
-
-    <!-- JavaScript to dynamically load category fields -->
-    <script>
-        // Function to load categories from the database
-document.addEventListener("DOMContentLoaded", function () {
-    fetch('/categories')
-        .then(response => response.json())
-        .then(data => {
-            const categorySelect = document.getElementById("category");
-            data.categories.forEach(category => {
-                const option = document.createElement("option");
-                option.value = category._id;
-                option.textContent = category.name;
-                categorySelect.appendChild(option);
-            });
-        })
-        .catch(error => console.error('Error loading categories:', error));
-});
-
-// Function to load category-specific fields based on selected category
-function loadCategoryFields() {
-    const categoryId = document.getElementById("category").value;
-
-    // Clear previous fields
-    const fieldsContainer = document.getElementById("categoryFields");
-    fieldsContainer.innerHTML = '';
-
-    if (categoryId) {
-        fetch(`/categoryFields/${categoryId}`)
-            .then(response => response.json())
-            .then(data => {
-                data.fields.forEach(field => {
-                    const div = document.createElement("div");
-                    div.classList.add("form-group");
-
-                    // Add label
-                    const label = document.createElement("label");
-                    label.textContent = field.field_name + ':';
-                    div.appendChild(label);
-
-                    // Add input based on field type
-                    let input;
-                    switch (field.field_type) {
-                        case 'text':
-                        case 'number':
-                        case 'date':
-                            input = document.createElement("input");
-                            input.type = field.field_type;
-                            input.name = field.field_name;
-                            input.required = field.is_required;
-                            break;
-                        case 'dropdown':
-                            input = document.createElement("select");
-                            input.name = field.field_name;
-                            input.required = field.is_required;
-                            const options = JSON.parse(field.options);
-                            for (let key in options) {
-                                const option = document.createElement("option");
-                                option.value = key;
-                                option.textContent = options[key];
-                                input.appendChild(option);
-                            }
-                            break;
-                        case 'file':
-                            input = document.createElement("input");
-                            input.type = 'file';
-                            input.name = field.field_name;
-                            input.required = field.is_required;
-                            break;
-                    }
-                    div.appendChild(input);
-                    fieldsContainer.appendChild(div);
-                });
-            })
-            .catch(error => console.error('Error loading category fields:', error));
-    }
-}
-
-    </script>
 </body>
 </html>
