studentDash and other changes mentioned in WP

--- a/public/HTML/Profile.html
+++ b/public/HTML/Profile.html
@@ -33,7 +33,7 @@
                     <i class="uil uil-estate"></i>
                     <span class="link-name">Home</span>
                 </a></li>
-                <li><a href="addActivity2.html">
+                <li><a href="../HTML/addActivity.html">
                   <i class="uil uil-plus"></i>
                     <span class="link-name">Post</span>
                 </a></li>
@@ -53,21 +53,10 @@
               </a></li>
             
             <ul class="logout-mode">
-                <li><a href="#">
+                <li><a href="../HTML/loginPage.html">
                     <i class="uil uil-signout"></i>
                     <span class="link-name">Logout</span>
                 </a></li>
-
-                <li class="mode">
-                    <a href="#">
-                        <i class="uil uil-moon"></i>
-                    <span class="link-name">Dark Mode</span>
-                </a>
-
-                <div class="mode-toggle">
-                  <span class="switch"></span>
-                </div>
-            </li>
             </ul>
         </div>
     </nav>
@@ -94,6 +83,10 @@
                                     <li class="mb-2 mb-xl-3 display-28"><span class="display-26 text-secondary me-2 font-weight-600">Website:</span> www.example.com</li>
                                     <li class="display-28"><span class="display-26 text-secondary me-2 font-weight-600">Phone:</span> 8850852472</li>
                                 </ul>
+                                <a href="../HTML/studentAddinfo.html"> 
+                                    <button class="Editprofile mt-3">Edit Profile</button> 
+                                </a>
+                                
                                 <ul class="social-icon-style1 list-unstyled mb-0 ps-0">
                                     <li><a href="#!"><i class="ti-twitter-alt"></i></a></li>
                                     <li><a href="#!"><i class="ti-facebook"></i></a></li>
