--- a/public/HTML/addActivity.html
+++ b/public/HTML/addActivity.html
@@ -23,7 +23,7 @@
                     <i class="uil uil-estate"></i>
                     <span class="link-name">Home</span>
                 </a></li>
-                <li><a href="addActivity2.html">
+                <li><a href="../HTML/addActivity.html">
                   <i class="uil uil-plus"></i>
                     <span class="link-name">Post</span>
                 </a></li>
