--- a/public/HTML/portfolio2.html
+++ b/public/HTML/portfolio2.html
@@ -44,12 +44,6 @@
                     <i class="uil uil-browser"></i>
                     <span class="link-name">Profile</span>
                 </a></li> 
-
-                <li><a href="entryManagement.html">
-                  <i class="uil uil-cog"></i>
-                  <span class="link-name">Manage Activity</span>
-              </a></li>
-            
             <ul class="logout-mode">
                 <li><a href="../HTML/loginPage.html">
                     <i class="uil uil-signout"></i>
@@ -63,10 +57,10 @@
         <div class="left-section">
             <div class="profile-container">
                 <div class="profile-picture">
-                    <img src="../../images/user.png" alt="Profile Picture">
+                    <img src="../../images/image.png" alt="Profile Picture">
                 </div>
                 <div>
-                    <h1>Name: Tanush Karane</h1>
+                    <h1>Tanush Karane</h1>
                     <p class="title">Engineering Graduate</p>
                 </div>
             </div>
