--- a/public/HTML/portfolio2.html
+++ b/public/HTML/portfolio2.html
@@ -57,7 +57,7 @@
         <div class="left-section">
             <div class="profile-container">
                 <div class="profile-picture">
-                    <img src="../../images/image.png" alt="Profile Picture">
+                    <img src="../../images/user1.png.png" alt="Profile Picture">
                 </div>
                 <div>
                     <h1>Tanush Karane</h1>
